# mirza

./: Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: check-local.sh
src/: app.rs  cli.rs  error.rs  interactive.rs  io_support.rs  main.rs
