[package]
name = "mirza"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "multipart",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
] }
serde_json = "1.0.145"
url = "2.5.4"
crossterm = "0.29.0"
ratatui = "0.29.0"
shell-words = "1.1.0"
